adding ga to button click

--- a/index.html
+++ b/index.html
@@ -50,7 +50,7 @@
 			<div class="collapse navbar-collapse navbar-1">
 				<ul class="site-navigation nav navbar-nav">
 					<li>
-						<a id="pl-undefined" onclick="scrollToTarget('#about')">About</a>
+						<a id="pl-undefined" onclick="scrollToTarget('#about'); onclick=_gaq.push([‘_trackEvent’, ‘button’, ’clicked’, ’contact us’,, ’true’];">About</a>
 					</li>
 					<li>
 						<a id="pl-undefined" onclick="scrollToTarget('#signup')">Sign up</a>
