--- a/index.html
+++ b/index.html
@@ -50,10 +50,10 @@
 			<div class="collapse navbar-collapse navbar-1">
 				<ul class="site-navigation nav navbar-nav">
 					<li>
-						<a id="pl-undefined" onclick="scrollToTarget('#about'); onclick=_gaq.push(['_trackEvent', 'button', 'clicked', 'contact us',, 'true'];">About</a>
+						<a id="pl-undefined" onclick="scrollToTarget('#about')">About</a>
 					</li>
 					<li>
-						<a id="pl-undefined" onclick="scrollToTarget('#signup')">Sign up</a>
+						<a id="pl-undefined" onclick="scrollToTarget('#signup'); ga('send', 'event', 'button', 'click', 'about buttons', 1);">Sign up</a>
 					</li>
 				</ul>
 			</div>
