adding GA to buttons

--- a/index.html
+++ b/index.html
@@ -50,10 +50,10 @@
 			<div class="collapse navbar-collapse navbar-1">
 				<ul class="site-navigation nav navbar-nav">
 					<li>
-						<a id="pl-undefined" onclick="scrollToTarget('#about')">About</a>
+						<a id="pl-undefined" onclick="scrollToTarget('#about'); ga('send', 'event', 'button', 'click', 'about buttons');">About</a>
 					</li>
 					<li>
-						<a id="pl-undefined" onclick="scrollToTarget('#signup'); ga('send', 'event', 'button', 'click', 'about buttons', 1);">Sign up</a>
+						<a id="pl-undefined" onclick="scrollToTarget('#signup'); ga('send', 'event', 'button', 'click', 'signup buttons');">Sign up</a>
 					</li>
 				</ul>
 			</div>
@@ -131,7 +131,7 @@
 				</h3>
 				<p class=" mg-md">
 					We are currently inviting people to join our development process because we are interested in how people are intereacting with the product. And by give out prototypes, we can constantly improving the experinece.
-				</p><a href="https://chinweiliao.typeform.com/to/tci44t" class="btn  btn-lg btn-d" target="_blank" id="signupbutton">Sign me up using Typeform</a>
+				</p><a href="https://chinweiliao.typeform.com/to/tci44t" class="btn  btn-lg btn-d" target="_blank" id="signupbutton" onclick="ga('send', 'event', 'button', 'click', 'about buttons');">Sign me up using Typeform</a>
 			</div>
 			<div class="col-sm-8">
 				<img src="img/open%20for%20test.jpg" class="img-responsive" width="100%" />
