--- a/index.html
+++ b/index.html
@@ -50,10 +50,10 @@
 			<div class="collapse navbar-collapse navbar-1">
 				<ul class="site-navigation nav navbar-nav">
 					<li>
-						<a id="pl-undefined" onclick="scrollToTarget('#about'); ga('send', 'event', 'button', 'click', 'about buttons');">About</a>
+						<a id="pl-undefined" onclick="scrollToTarget('#about'); ga('send', 'event', 'nav-button', 'click', 'about button');">About</a>
 					</li>
 					<li>
-						<a id="pl-undefined" onclick="scrollToTarget('#signup'); ga('send', 'event', 'button', 'click', 'signup buttons');">Sign up</a>
+						<a id="pl-undefined" onclick="scrollToTarget('#signup'); ga('send', 'event', 'nav-button', 'click', 'signup button');">Sign up</a>
 					</li>
 				</ul>
 			</div>
@@ -73,7 +73,7 @@
 				<h4 class="mg-md" id="hero-exp">
 					<i>"While most tools today are created for the photographer, we believe there should be a tool that is designed for the person standing on the other side of the camera."</i>
 				</h4>
-                <a class="btn  btn-lg btn-d" id="first-btn" onclick="scrollToTarget('#signup')">Sign up</a>
+                <a class="btn  btn-lg btn-d" id="first-btn" onclick="scrollToTarget('#signup'); ga('send', 'event', 'hero-button', 'click', 'signup button');">Sign up</a>
 			</div>
 		</div>
 	</div>
@@ -131,7 +131,7 @@
 				</h3>
 				<p class=" mg-md">
 					We are currently inviting people to join our development process because we are interested in how people are intereacting with the product. And by give out prototypes, we can constantly improving the experinece.
-				</p><a href="https://chinweiliao.typeform.com/to/tci44t" class="btn  btn-lg btn-d" target="_blank" id="signupbutton" onclick="ga('send', 'event', 'button', 'click', 'about buttons');">Sign me up using Typeform</a>
+				</p><a href="https://chinweiliao.typeform.com/to/tci44t" class="btn  btn-lg btn-d" target="_blank" id="signupbutton" onclick="ga('send', 'event', 'final-button', 'click', 'signup button');">Sign me up using Typeform</a>
 			</div>
 			<div class="col-sm-8">
 				<img src="img/open%20for%20test.jpg" class="img-responsive" width="100%" />
