--- a/index.html
+++ b/index.html
@@ -38,7 +38,7 @@
 <div class="page-container">
     
 <!-- Navigation Bloc -->
-<div class="bloc l-bloc bgc-white" id="nav-bloc">
+<div class="bloc l-bloc bgc-white" id="nav-bloc" onmouseover="ga('send', 'event', 'nav-bar', 'mouseover', 'mouse over first section')">
 	<div class="container bloc-sm">
 		<nav class="navbar row">
 			<div class="navbar-header">
