--- a/index.html
+++ b/index.html
@@ -38,7 +38,7 @@
 <div class="page-container">
     
 <!-- Navigation Bloc -->
-<div class="bloc l-bloc bgc-white" id="nav-bloc" onmouseover="ga('send', 'event', 'nav-bar', 'mouseover', 'mouse over first section')">
+<div class="bloc l-bloc bgc-white" id="nav-bloc" onmouseover="ga('send', 'event', 'nav-bloc', 'mouseover', 'mouse over nav bloc')">
 	<div class="container bloc-sm">
 		<nav class="navbar row">
 			<div class="navbar-header">
@@ -63,7 +63,7 @@
 <!-- Navigation Bloc END -->
 
 <!-- bloc-1 -->
-<div class="bloc bgc-white b-parallax bg-pic1 d-bloc" id="bloc-1">
+<div class="bloc bgc-white b-parallax bg-pic1 d-bloc" id="bloc-1" onmouseover="ga('send', 'event', 'hero-bloc', 'mouseover', 'mouse over hero bloc')">
 	<div class="container bloc-xxl">
 		<div class="row">
 			<div class="col-sm-12 col-md-8 col-md-offset-2" id="first-block">
@@ -81,10 +81,10 @@
 <!-- bloc-1 END -->
 
 <!-- Bloc Group -->
-<div class='bloc-group'>
+<div class='bloc-group' onmouseover="ga('send', 'event', 'feature-bloc', 'mouseover', 'mouse over feature bloc')">
 
 <!-- about-->
-<div class="bloc l-bloc bgc-white bloc-tile-2" id="about">
+<div class="bloc l-bloc bgc-white bloc-tile-2" id="about" >
 	<div class="container bloc-lg">
 		<div class="row">
 			<div class="col-sm-12">
@@ -122,7 +122,7 @@
 <!-- Bloc Group END -->
 
 <!-- Footer - signup -->
-<div class="bloc l-bloc bgc-white" id="signup">
+<div class="bloc l-bloc bgc-white" id="signup" onmouseover="ga('send', 'event', 'signup-bloc', 'mouseover', 'mouse over signup bloc')">
 	<div class="container bloc-lg">
 		<div class="row">
 			<div class="col-sm-4">
