--- a/index.html
+++ b/index.html
@@ -68,10 +68,10 @@
 		<div class="row">
 			<div class="col-sm-12 col-md-8 col-md-offset-2" id="first-block">
 				<h2 class="mg-lg" id="hero-tag">
-					A case that turns your smart phone into a dual display camera…
+					A case that turns your smartphone into a dual display camera…
 				</h2>
 				<h4 class="mg-md" id="hero-exp">
-					<i>"While most tools today are created for the photographer, we believe there should be a tool that is designed for the person standing on the other side of the camera."</i>
+					Project Mirror allows people in font of the camera to always see what photographer sees before the picture is taken, so everyone can participate in the photo-taking process to build fun and lasting memories. 
 				</h4>
                 <a class="btn  btn-lg btn-d" id="first-btn" onclick="scrollToTarget('#signup'); ga('send', 'event', 'hero-button', 'click', 'signup button');">Sign up</a>
 			</div>
@@ -90,10 +90,9 @@
 			<div class="col-sm-12">
 				<img src="img/feature1.jpg" width="100%" />
 				<h3 class="mg-md">
-					Always see what photographer sees
+					Everyone can see what photographer sees
 				</h3>
-				<p>
-					People being photograhped can always see what photographer sees in real time, allowing everyone to participate in the photo-taking process.
+				<p>While with friends, it is not easy to take a picture that everyone is 100% satisfied. With Project Mirror, you can take better picture without being blamed by others since they can now collaborate with you by moving their position, adjusting their facial expressions or even making funny faces based on the real time feedback.
 				</p>
 			</div>
 		</div>
@@ -108,10 +107,10 @@
 			<div class="col-sm-12">
 				<img src="img/feature3.jpg" width="100%" />
 				<h3 class="mg-md">
-					Take better selfie
+					Take a better selfie
 				</h3>
 				<p>
-					Use the better camera on your smartphone to take selfie.
+					For most smartphone users, using the front camera to take selfie is more convenient, but the quailty can be bad while you are in poor lighting places. Use Project Mirror to take better selfie with the better camera.
 				</p>
 			</div>
 		</div>
