--- a/index.html
+++ b/index.html
@@ -43,7 +43,8 @@ content="http://projectmirror.co/img/pic1.jpg" />
 
     
     
-<!-- Hotjar Tracking Code for www.projectmirror.co -->
+<!-- Hotjar Tracking Code -->
+
 <script>
     (function(h,o,t,j,a,r){
         h.hj=h.hj||function(){(h.hj.q=h.hj.q||[]).push(arguments)};
@@ -54,6 +55,7 @@ content="http://projectmirror.co/img/pic1.jpg" />
         a.appendChild(r);
     })(window,document,'//static.hotjar.com/c/hotjar-','.js?sv=');
 </script>
+
 
 
 <!-- Facebook Conversion Code for test 1 -->
